# Dear_ImGui

./: README.md
Doc/: GLSL.MD  im_gui.md  openGl.md
HelloWindow/: .gitignore  CMakeLists.txt  main.cpp
HelloWindow/include/: glad.h
MaxVertexAttributes/: CMake.md  CMakeLists.txt  glad.c  main.cpp
shadingTriangle/: CMakeLists.txt  main.cpp
triangle_rendering/: .gitignore  CMakeLists.txt  HellowWindow.cpp  build.sh  clean.sh  main.cpp  readme.md
triangle_rendering/MaxVertexAttributes/: CMakeLists.txt  main.cpp
triangle_rendering/include/: common.h
